<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/motionLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_primary"
    app:layoutDescription="@xml/scene_splash">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_splash_logo"
        android:contentDescription="Logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAppName" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#FFFFFF"
        android:letterSpacing="-0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintBottom_toTopOf="@id/tvTagline"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline"
        android:textSize="14sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#CCE5DEFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintBottom_toTopOf="@id/lottieLoading"
        android:layout_marginTop="4dp" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieLoading"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:lottie_rawRes="@raw/anim_loading_dots"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp" />

    <TextView
        android:id="@+id/tvTaglineKannada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_tagline_kannada"
        android:textSize="12sp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="#99FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lottieLoading"
        android:layout_marginBottom="8dp" />

</androidx.constraintlayout.motion.widget.MotionLayout>
